--- a/v9-fulltext.html
+++ b/v9-fulltext.html
@@ -29,6 +29,7 @@
       <div class="col-md-3">
         <div class="newsroomArticleShare"> 
           <h3>Share this</h3>
+          <div class="sharethis-inline-share-buttons"></div>
           <div class="addthis_inline_share_toolbox"></div>
         </div><!-- end newsroomArticleShare -->
       </div>
@@ -42,6 +43,7 @@
     <div class="row">
       <div class="newsroomArticleShare col-md-8 offset-md-3">
         <h3>Share this</h3>
+        <div class="sharethis-inline-share-buttons"></div>
         <div class="addthis_inline_share_toolbox"></div>
       </div>
     </div> <!-- end newsroomArticleShare -->
