--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -13,5 +13,8 @@
 <meta name="twitter:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;twitter:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <meta name="twitter:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"></meta>
-<meta name="newsTopics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
-<meta name="newsTypes" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
+<meta name="news-topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
+<meta name="news-types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
+<meta name="schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
+
+<meta name="schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
