--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -16,5 +16,7 @@
 <meta name="news-topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
 <meta name="news-types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
 <meta name="schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
+<meta name="staff-department" content="<t4 type='content' name='Department' output='normal' display_field='value' />" />
 
-<meta name="schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
+<meta name="staff-department" content="<t4 type='content' name='Department' output='normal' display_field='value' />" />
+
