--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -17,6 +17,8 @@
 <meta name="news-types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
 <meta name="schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
 <meta name="staff-department" content="<t4 type='content' name='Department' output='normal' display_field='value' />" />
+<meta name="author" content="<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />" />
 
-<meta name="staff-department" content="<t4 type='content' name='Department' output='normal' display_field='value' />" />
+<meta name="author" content="<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />" />
+
 
