--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -14,12 +14,13 @@
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;twitter:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <meta name="twitter:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"></meta>
 <meta name="news:headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
-
+<meta name="news:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="news:author" content="<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="news:image-credit" content="<t4 type='content' name='Image Credit' output='normal' modifiers='striptags,htmlentities' />" />
+<meta name="news:image-caption" content="<t4 type='content' name='Image Caption' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="news:topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
 <meta name="news:types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
 <meta name="news:campus-tags" content="<t4 type='content' name='Campus Tags' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="news:schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />
 <meta name="news:staff-department" content="<t4 type='content' name='Department' output='normal' display_field='value' />" />
-<meta name="news:headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
+<meta name="news:publish-date" content="<t4 type='content' name='Publish Date' output='normal' date_format='MMMM d, yyyy' />" />
