--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -13,21 +13,16 @@
 <meta name="twitter:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;twitter:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <meta name="twitter:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"></meta>
-
-
 <meta name="news:headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="news:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
-<meta name="news:author" content="<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />" />
-<meta name="news:image-credit" content="<t4 type='content' name='Image Credit' output='normal' modifiers='striptags,htmlentities' />" />
-<meta name="news:image-caption" content="<t4 type='content' name='Image Caption' output='normal' modifiers='striptags,htmlentities' />" />
+<t4 type="content" name="Author" output="selective-output" modifiers="striptags,htmlentities" format="<meta name=&quot;news:author&quot; content=&quot;<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
+<t4 type="content" name="Image Credit" output="selective-output" modifiers="striptags,htmlentities" format="<meta name=&quot;news:image-credit&quot; content=&quot;<t4 type='content' name='Image Credit' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
+<t4 type="content" name="Image Caption" output="selective-output" modifiers="striptags,htmlentities" format="<meta name=&quot;news:image-caption&quot; content=&quot;<t4 type='content' name='Image Caption' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <meta name="news:topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
 <meta name="news:types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
-
-
-
 <t4 type="content" name="Campus Tags" output="selective-output" modifiers="striptags,htmlentities" format="<meta name=&quot;news:campus-tags&quot; content=&quot;<t4 type='content' name='Campus Tags' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Schools and Colleges" output="selective-output" format="<meta name=&quot;news:schools-colleges&quot; content=&quot;<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />&quot; />" />
-<t4 type="content" name="Department" output="selective-output" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' />&quot; />\" />
+<t4 type="content" name="Department" output="selective-output" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' />&quot; />" />
 <meta name="news:publish-date" content="<t4 type='content' name='Publish Date' output='normal' date_format='MMMM d, yyyy' />" />
 
 
