--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -23,4 +23,5 @@
 <t4 type="content" name="Department" output="selective-output" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' />&quot; />" />
 <meta name="headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
 <t4 type="content" name="Author" output="selective-output" modifiers="striptags,htmlentities" format="<meta name=&quot;author&quot; content=&quot;<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
+<t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <meta name="datePublished" content="<t4 type='content' name='Publish Date' output='normal' date_format='yyyy/MM/dd' />" />
