--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -4,7 +4,7 @@
 <meta property="og:site_name" content="Seattle University">
 <meta property="og:title" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
 <meta property="og:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
-<t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta property=<meta name="news:schools-colleges" content="<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />" />og:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; /><meta property=&quot;og:image:alt&quot; content=&quot;<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;text/alt&quot; />&quot; />" formatter="path/*" />
+<t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta property=&quot;og:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; /><meta property=&quot;og:image:alt&quot; content=&quot;<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;text/alt&quot; />&quot; />" formatter="path/*" />
 <meta property="og:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:site" content="@SUNewsroom">
@@ -15,7 +15,7 @@
 <meta name="twitter:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"></meta>
 <meta name="headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="datePublished" content="<t4 type='content' name='Publish Date' output='normal' date_format='yyyy/MM/dd' />" />
-<t4 type="content" name="Author" output="selective-output" process-format="true" format="<meta name=&quot;author&quot; content=&quot;<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
+<t4 type="content" name="Author" output="selective-output" process-format="true" format="<meta name=&quot;author&quot; type="Person" name=&quot;<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <t4 type="content" name="Image Credit" output="selective-output" process-format="true" format="<meta name=&quot;news:image-credit&quot; content=&quot;<t4 type='content' name='Image Credit' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Image Caption" output="selective-output" process-format="true" format="<meta name=&quot;news:image-caption&quot; content=&quot;<t4 type='content' name='Image Caption' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
