--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -13,7 +13,7 @@
 <meta name="twitter:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;twitter:image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
 <meta name="twitter:url" content="https://www.seattleu.edu<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"></meta>
-<meta name="headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
+<meta @type="NewsArticle" name="headline" content="<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />" />
 <meta name="datePublished" content="<t4 type='content' name='Publish Date' output='normal' date_format='yyyy/MM/dd' />" />
 <t4 type="content" name="Author" output="selective-output" process-format="true" format="<meta property=&quot;author&quot; @type=&quot;Person&quot; name=&quot;<t4 type='content' name='Author' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<meta name=&quot;image&quot; content=&quot;https://www.seattleu.edu<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;path/*&quot; />&quot; />" />
