--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -25,3 +25,6 @@
 <t4 type="content" name="Campus Tags" output="selective-output" process-format="true" format="<meta name=&quot;news:campus-tags&quot; content=&quot;<t4 type='content' name='Campus Tags' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Schools and Colleges" output="selective-output" process-format="true" format="<meta name=&quot;news:schools-colleges&quot; content=&quot;<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />&quot; />" />
 <t4 type="content" name="Department" output="selective-output" process-format="true" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' />&quot; />" />
+
+
+<meta @type="NewsArticle" property="author" content="Person">
