--- a/v10-text-fulltext-meta-content.html
+++ b/v10-text-fulltext-meta-content.html
@@ -20,9 +20,8 @@
 <t4 type="content" name="Image Credit" output="selective-output" process-format="true" format="<meta name=&quot;news:image-credit&quot; content=&quot;<t4 type='content' name='Image Credit' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <t4 type="content" name="Image Caption" output="selective-output" process-format="true" format="<meta name=&quot;news:image-caption&quot; content=&quot;<t4 type='content' name='Image Caption' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
 <meta name="news:description" content="<t4 type='content' name='Article Subhead' output='normal' modifiers='striptags,htmlentities' />" />
-<meta name="news:topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' />" />
-<meta name="news:types" content="<t4 type='content' name='News Types' output='normal' display_field='value' />" />
+<meta name="news:topics" content="<t4 type='content' name='News Topics' output='normal' display_field='value' delimiter=' | ' />" />
+<meta name="news:types" content="<t4 type='content' name='News Types' output='normal' display_field='value' delimiter=' | ' />" />
 <t4 type="content" name="Campus Tags" output="selective-output" process-format="true" format="<meta name=&quot;news:campus-tags&quot; content=&quot;<t4 type='content' name='Campus Tags' output='normal' modifiers='striptags,htmlentities' />&quot; />" />
-<t4 type="content" name="Schools and Colleges" output="selective-output" process-format="true" format="<meta name=&quot;news:schools-colleges&quot; content=&quot;<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' />&quot; />" />
-<t4 type="content" name="Department" output="selective-output" process-format="true" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' />&quot; />" />
-
+<t4 type="content" name="Schools and Colleges" output="selective-output" process-format="true" format="<meta name=&quot;news:schools-colleges&quot; content=&quot;<t4 type='content' name='Schools and Colleges' output='normal' display_field='value' delimiter=' | ' />&quot; />" />
+<t4 type="content" name="Department" output="selective-output" process-format="true" format="<meta name=&quot;news:staff-department&quot; content=&quot;<t4 type='content' name='Department' output='normal' display_field='value' delimiter=' | ' />&quot; />" />
