add library logic to hero wrapper

--- a/news-test-7917-v10-text-html.html
+++ b/news-test-7917-v10-text-html.html
@@ -1,5 +1,5 @@
 <article class="news news--detail">
-    <div class="hero--basic hero--news hero--news__photo bg--dark">
+    <div class="hero--basic hero--news global-padding--15x<t4 type="content" name="Media Library Image" output="selective-output" format="-ignore hero--news__photo" formatter="path/*" /> bg--dark">
 
         <div class="grid-container">
             <div class="grid-x grid-margin-x">
