--- a/news-5150-v10-text-new-fulltext.html
+++ b/news-5150-v10-text-new-fulltext.html
@@ -36,7 +36,10 @@
                 <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;43&quot; /> 500w,
                 <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;42&quot; /> 768w,
                 <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;41&quot; /> 1160w&quot; alt=&quot;<t4 type=&quot;content&quot; name=&quot;Image Caption&quot; output=&quot;normal&quot; modifiers=&quot;&quot; />&quot; class=&quot;js-processed&quot; />
-            <figcaption><blockquote><t4 type=&quot;content&quot; name=&quot;Image Caption&quot; output=&quot;normal&quot; modifiers=&quot;striptags,htmlentities&quot;/></blockquote></figcaption>
+            
+                <t4 type=&quot;content&quot; name=&quot;Image Caption&quot; output=&quot;selective-output&quot; process-format=&quot;True&quot; format=&quot;<figcaption><blockquote><t4 type=&quot;content&quot; name=&quot;Image Caption&quot; output=&quot;normal&quot; modifiers=&quot;striptags,htmlentities&quot;/></blockquote></figcaption>&quot; />
+                
+
         </figure>
     </div>" formatter="path/*" />
 </div>
