fix(v10 news image): excape char cdn pxl

--- a/v10-text-news-image.html
+++ b/v10-text-news-image.html
@@ -1,7 +1,6 @@
-<img loading=&quot;eager&quot; sizes=&quot;(min-width: 1280px) 1160px, calc(93.75vw - 21px)&quot;
-    src=&quot;<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;43&quot; />&quot; srcset=&quot;
-    <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;43&quot; /> 500w,
-    <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;42&quot; /> 768w,
-    <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;41&quot; /> 1160w&quot;
-    alt=&quot;<t4 type=&quot;content&quot; name=&quot;Image Caption&quot; output=&quot;normal&quot; modifiers=&quot;&quot; />&quot; class=&quot;js-processed&quot;/>
->
+<img loading="eager" sizes="(min-width: 1280px) 1160px, calc(93.75vw - 21px)"
+    src="<t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='43' />"
+    srcset="<t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='43' /> 500w,
+        <t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='42' /> 768w,
+        <t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='41' /> 1160w"
+    alt="<t4 type='content' name='Media Library Image' output='normal' formatter='text/alt' />" class="js-processed">
