--- a/v10-text-related.html
+++ b/v10-text-related.html
@@ -7,7 +7,7 @@
       </figure>" formatter="path/*"
     />
     <div class="news-story__text text-margin-reset">
-      <h3 class="h5 funderline"><a href="<t4 type=&quot;content&quot; name=&quot;Title&quot; output=&quot;fulltext&quot; use-element=&quot;true&quot; filename-element=&quot;Title&quot; modifiers=&quot;striptags,htmlentities&quot; />"><t4 type="content" name="Title" output="normal" modifiers="striptags,htmlentities" /></a></h3>
+      <h3 class="h5 funderline"><a href="<t4 type="content" name="Title" output="fulltext" use-element="true" filename-element="Title" modifiers="striptags,htmlentities" />"><t4 type="content" name="Title" output="normal" modifiers="striptags,htmlentities" /></a></h3>
       <div class="eyebrow"><t4 type="content" name="News Types" output="normal" display_field="value" /></div>
       <div class="global-spacing--2x">
         <t4 type="content" name="Article Subhead" output="normal" modifiers="striptags,htmlentities" />
