comment image ai suggest

--- a/v10-text-featured-image.html
+++ b/v10-text-featured-image.html
@@ -1,1 +1,13 @@
 <t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<img loading=&quot;eager&quot; sizes=&quot;(min-width: 1460px) 760px, (min-width: 780px) 52.27vw, calc(100vw - 40px)&quot; src=&quot;<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;47&quot; />&quot; srcset=&quot;<t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;47&quot; /> 500w, <t4 type=&quot;content&quot; name=&quot;Media Library Image&quot; output=&quot;normal&quot; formatter=&quot;v10/image/pxl-crop&quot; cdn=&quot;true&quot; pxl-filter-id=&quot;46&quot; /> 768w&quot; alt=&quot;placeholder&quot; class=&quot;js-processed&quot;>" formatter=&quot;path/*&quot; />
+
+<!--  
+          <img 
+            loading="eager" 
+            sizes="(min-width: 1460px) 760px, (min-width: 780px) 52.27vw, calc(100vw - 40px)" 
+            src="{{image element="Media Library Image" filter="47"}}"
+            srcset="
+              {{image element="Media Library Image" filter="47"}} 500w,
+              {{image element="Media Library Image" filter="46"}} 768w"
+            alt="{{publish element="Media Library Image" attribute="alt"}}"
+            class="js-processed">
+-->
