--- a/v10-text-html-related-extended-id8063.html
+++ b/v10-text-html-related-extended-id8063.html
@@ -1,42 +1,14 @@
-<section
-  class="related-news-stories-section global-padding--10x bg--dark bg--blue bg--gradient"
-  id="<t4 type='meta' meta='content_id' />"
->
+<section class="related-news-stories-section global-padding--10x bg--dark bg--blue bg--gradient" id="<t4 type='meta' meta='content_id' />">
   <t4 type="meta" meta="html_anchor" />
-
   <div class="grid-container oho-animate-sequence">
     <div class="grid-x grid-margin-x">
       <div class="cell large-9">
         <div class="section-heading--basic text-margin-reset">
           <h2 class="oho-animate fade-in">
-            <t4
-              type="content"
-              name="Heading"
-              output="normal"
-              modifiers="striptags,htmlentities"
-            />
+            <t4 type="content" name="Heading" output="normal" modifiers="striptags,htmlentities" />
           </h2>
-
-          <t4
-            type="content"
-            name="Description"
-            output="selective-output"
-            process-format="true"
-            format='<div class="global-spacing--2x oho-animate fade-in">
-                        <p><t4 type="content" name="Description" output="normal" modifiers="striptags,htmlentities,nl2br" /></p>
-                    </div>'
-          />
-
-          <t4
-            type="content"
-            name="Primary Topic"
-            output="selective-output"
-            modifiers="nav_sections"
-            process-format="true"
-            format='<div class="section-heading__link global-spacing--2x oho-animate fade-in">
-                        <a href="<t4 type="navigation" name="Link to News & Stories" id="991" />?newsTopics=<?php echo urlencode(strtolower("<t4 type="content" name="Primary Topic" output="normal" display_field="value" modifiers="striptags" />")); ?>">More Similar News &amp; Stories</a>
-                    </div>'
-          />
+          <t4 type="content" name="Description" output="selective-output" process-format="true" format='<div class="global-spacing--2x oho-animate fade-in"><p><t4 type="content" name="Description" output="normal" modifiers="striptags,htmlentities,nl2br" /></p></div>'/>
+          <t4 type="content" name="Primary Topic" output="selective-output" modifiers="nav_sections" process-format="true" format='<div class="section-heading__link global-spacing--2x oho-animate fade-in"><a href="<t4 type="navigation" name="Link to News & Stories" id="991" />?newsTopics=<?php echo urlencode(strtolower("<t4 type="content" name="Primary Topic" output="normal" display_field="value" modifiers="striptags" />")); ?>">More Similar News &amp; Stories</a></div>' />
         </div>
       </div>
     </div>
@@ -44,21 +16,14 @@
       <div class="grid-container oho-animate-sequence">
         <div class="swiper-container">
           <ul class="swiper-wrapper">
-            <t4
-              type="navigation"
-              name="Related News Navigation Extended"
-              id="1116"
-            />
+            <t4 type="navigation" name="Related News Navigation Extended" id="1116" />
           </ul>
           <div class="slider-navigation">
             <button class="slider-navigation__prev">
-              <i class="far fa-chevron-left" aria-hidden="true"></i
-              ><span class="show-for-sr">Go to the previous slide.</span>
+              <i class="far fa-chevron-left" aria-hidden="true"></i><span class="show-for-sr">Go to the previous slide.</span>
             </button>
-
             <button class="slider-navigation__next">
-              <i class="far fa-chevron-right" aria-hidden="true"></i
-              ><span class="show-for-sr">Go to the next slide.</span>
+              <i class="far fa-chevron-right" aria-hidden="true"></i><span class="show-for-sr">Go to the next slide.</span>
             </button>
           </div>
         </div>
