--- a/v10-text-html-related-extended-id8063.html
+++ b/v10-text-html-related-extended-id8063.html
@@ -5,10 +5,10 @@
       <div class="cell large-9">
         <div class="section-heading--basic text-margin-reset">
           <h2 class="oho-animate fade-in">
-            <t4 type="content" name="Heading" output="normal" modifiers="striptags,htmlentities" />
+            <t4 type="content" name="Heading" output="normal" modifiers="striptags,htmlentities">
           </h2>
-          <t4 type="content" name="Description" output="selective-output" process-format="true" format='<div class="global-spacing--2x oho-animate fade-in"><p><t4 type="content" name="Description" output="normal" modifiers="striptags,htmlentities,nl2br" /></p></div>'/>
-          <t4 type="content" name="Primary Topic" output="selective-output" modifiers="nav_sections" process-format="true" format='<div class="section-heading__link global-spacing--2x oho-animate fade-in"><a href="<t4 type="navigation" name="Link to News & Stories" id="991" />?newsTopics=<?php echo urlencode(strtolower("<t4 type="content" name="Primary Topic" output="normal" display_field="value" modifiers="striptags" />")); ?>">More Similar News &amp; Stories</a></div>' />
+          <t4 type="content" name="Description" output="selective-output" process-format="true" format='<div class="global-spacing--2x oho-animate fade-in"><p><t4 type="content" name="Description" output="normal" modifiers="striptags,htmlentities,nl2br" /></p></div>'>
+          <t4 type="content" name="Primary Topic" output="selective-output" modifiers="nav_sections" process-format="true" format='<div class="section-heading__link global-spacing--2x oho-animate fade-in"><a href="<t4 type="navigation" name="Link to News & Stories" id="991" />?newsTopics=<?php echo urlencode(strtolower("<t4 type="content" name="Primary Topic" output="normal" display_field="value" modifiers="striptags" />")); ?>">More Similar News &amp; Stories</a></div>'>
         </div>
       </div>
     </div>
