--- a/v10-text-html-related-extended-id8063.html
+++ b/v10-text-html-related-extended-id8063.html
@@ -1,4 +1,4 @@
-<section class="related-news-stories-section global-padding--10x bg--dark bg--blue bg--gradient" id="<t4 type='meta' meta='content_id' />">
+<section class="related-news-stories-section related-extended global-padding--10x bg--dark bg--blue bg--gradient" id="<t4 type='meta' meta='content_id' />">
     <t4 type="meta" meta="html_anchor" />
 
     <div class="grid-container oho-animate-sequence">
