--- a/v10-text-html-related-extended-id8063.html
+++ b/v10-text-html-related-extended-id8063.html
@@ -19,10 +19,24 @@
                 </div>
             </div>
         </div>
+        <div class="swiper-container">
+            <ul class="grid-x grid-margin-x global-spacing--6x swiper-wrapper">
+                <t4 type="navigation" name="Related News Navigation Extended" id="1116" />
+            </ul>
+        <div class="slider-navigation">
 
-        <ul class="grid-x grid-margin-x global-spacing--6x">
-            <t4 type="navigation" name="Related News Navigation Extended" id="1116" />
-        </ul>
+          <button class="slider-navigation__prev"><i class="far fa-chevron-left" aria-hidden="true"></i><span
+              class="show-for-sr">Go to the previous slide.</span></button>
 
+          <button class="slider-navigation__next"><i class="far fa-chevron-right" aria-hidden="true"></i><span
+              class="show-for-sr">Go to the next slide.</span></button>
+
+        </div>
+      </div>
     </div>
 </section>
+
+
+        <!-- <ul class="grid-x grid-margin-x global-spacing--6x">
+            <t4 type="navigation" name="Related News Navigation Extended" id="1116" />
+        </ul> -->
