add swiper class to section

--- a/v10-text-html-related-extended-id8063.html
+++ b/v10-text-html-related-extended-id8063.html
@@ -1,4 +1,4 @@
-<section class="related-news-stories-section related-extended global-padding--10x bg--dark bg--blue bg--gradient" id="<t4 type='meta' meta='content_id' />">
+<section class="related-news-stories-section related-extended departments-profiles-swiper global-padding--10x bg--dark bg--blue bg--gradient" id="<t4 type='meta' meta='content_id' />">
     <t4 type="meta" meta="html_anchor" />
 
     <div class="grid-container oho-animate-sequence">
@@ -19,7 +19,7 @@
                 </div>
             </div>
         </div>
-        <div class="swiper-container">
+        <div class="swiper-container oho-animate-sequence">
             <ul class="grid-x grid-margin-x global-spacing--6x swiper-wrapper">
                 <t4 type="navigation" name="Related News Navigation Extended" id="1116" />
             </ul>
