--- a/v1-text-html-carousel-centralized-id8064.html
+++ b/v1-text-html-carousel-centralized-id8064.html
@@ -1,4 +1,5 @@
 <section class="news-section global-padding--10x bg--dark bg--blue">
+    <t4 type="meta" meta="html_anchor" />
     <div class="grid-container oho-animate-sequence">
         <div class="grid-x grid-margin-x">
             <div class="cell large-9">
