centralized: add legendary-styles class to section

--- a/v10-test-html-centralized-id8064.html
+++ b/v10-test-html-centralized-id8064.html
@@ -1,5 +1,5 @@
 <!-- News Carousel Central News ID: 8064 -->
-<section class="news-section global-padding--10x bg--dark bg--blue">
+<section class="news-section legendary-styles global-padding--10x bg--dark bg--blue">
   <t4 type="meta" meta="html_anchor" />
     <div class="grid-container oho-animate-sequence">
         <div class="grid-x grid-margin-x">
