mv figure to layout

--- a/v10-text-carousel-centralized-image.html
+++ b/v10-text-carousel-centralized-image.html
@@ -1,6 +1,1 @@
-<t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<figure class='aspect-ratio-frame' style='--aspect-ratio: 24/38'>
-    <img loading='lazy' src='<t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='63' />' srcset='
-            <t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='45' /> 380w, 
-            <t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='44' /> 728w' sizes='(min-width: 1280px) 360px, (min-width: 780px) 29.17vw, calc(100vw - 40px)' alt='<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />' class='js-processed'>
-    </figure>" formatter="path/*"
-/>
+<t4 type="content" name="Media Library Image" output="selective-output" process-format="true" format="<img loading='lazy' src='<t4 type='content' name='Media Library Image' output='normal' formatter='v10/image/pxl-crop' cdn='true' pxl-filter-id='63' />' alt='<t4 type='content' name='Title' output='normal' modifiers='striptags,htmlentities' />' class='js-processed'>" formatter="path/*" />
